--- a/cladplus_data/resources/cladviz.ui
+++ b/cladplus_data/resources/cladviz.ui
@@ -40,7 +40,7 @@
   </property>
   <property name="windowIcon">
    <iconset>
-    <normaloff>cladplus.png</normaloff>cladplus.png</iconset>
+    <normaloff>+.png</normaloff>+.png</iconset>
   </property>
   <property name="autoFillBackground">
    <bool>false</bool>
@@ -64,31 +64,7 @@
     </font>
    </property>
    <layout class="QGridLayout" name="gridLayout">
-    <item row="14" column="1">
-     <widget class="QTabWidget" name="tabWidget">
-      <property name="minimumSize">
-       <size>
-        <width>300</width>
-        <height>0</height>
-       </size>
-      </property>
-      <property name="maximumSize">
-       <size>
-        <width>300</width>
-        <height>16777215</height>
-       </size>
-      </property>
-      <property name="font">
-       <font>
-        <italic>false</italic>
-       </font>
-      </property>
-      <property name="currentIndex">
-       <number>-1</number>
-      </property>
-     </widget>
-    </item>
-    <item row="19" column="1">
+    <item row="20" column="1">
      <widget class="QPushButton" name="btnQuit">
       <property name="enabled">
        <bool>true</bool>
@@ -134,21 +110,38 @@
       </property>
      </widget>
     </item>
-    <item row="17" column="1">
-     <widget class="Line" name="line_3">
-      <property name="orientation">
-       <enum>Qt::Horizontal</enum>
+    <item row="0" column="0" rowspan="21">
+     <layout class="QHBoxLayout" name="boxPlot">
+      <property name="spacing">
+       <number>0</number>
+      </property>
+     </layout>
+    </item>
+    <item row="11" column="1">
+     <widget class="QTabWidget" name="tabWidget">
+      <property name="minimumSize">
+       <size>
+        <width>300</width>
+        <height>0</height>
+       </size>
+      </property>
+      <property name="maximumSize">
+       <size>
+        <width>300</width>
+        <height>400</height>
+       </size>
+      </property>
+      <property name="font">
+       <font>
+        <italic>false</italic>
+       </font>
+      </property>
+      <property name="currentIndex">
+       <number>-1</number>
       </property>
      </widget>
     </item>
-    <item row="15" column="1">
-     <widget class="Line" name="line_2">
-      <property name="orientation">
-       <enum>Qt::Horizontal</enum>
-      </property>
-     </widget>
-    </item>
-    <item row="2" column="1" rowspan="9">
+    <item row="0" column="1" rowspan="11">
      <widget class="QLabel" name="lblLogo">
       <property name="minimumSize">
        <size>
@@ -166,7 +159,7 @@
        <string/>
       </property>
       <property name="pixmap">
-       <pixmap>cladplus.png</pixmap>
+       <pixmap>+.png</pixmap>
       </property>
       <property name="scaledContents">
        <bool>false</bool>
@@ -176,7 +169,14 @@
       </property>
      </widget>
     </item>
-    <item row="16" column="1">
+    <item row="12" column="1">
+     <widget class="Line" name="line_2">
+      <property name="orientation">
+       <enum>Qt::Horizontal</enum>
+      </property>
+     </widget>
+    </item>
+    <item row="13" column="1">
      <widget class="QLabel" name="lblStatus">
       <property name="styleSheet">
        <string notr="true">background-color: rgb(255, 255, 127);</string>
@@ -192,14 +192,14 @@
       </property>
      </widget>
     </item>
-    <item row="0" column="0" rowspan="20">
-     <layout class="QHBoxLayout" name="boxPlot">
-      <property name="spacing">
-       <number>0</number>
+    <item row="14" column="1">
+     <widget class="Line" name="line_3">
+      <property name="orientation">
+       <enum>Qt::Horizontal</enum>
       </property>
-     </layout>
+     </widget>
     </item>
-    <item row="18" column="1">
+    <item row="15" column="1" rowspan="5">
      <layout class="QVBoxLayout" name="vl_display"/>
     </item>
    </layout>
