--- a/cladplus_data/resources/cladviz.ui
+++ b/cladplus_data/resources/cladviz.ui
@@ -40,7 +40,7 @@
   </property>
   <property name="windowIcon">
    <iconset>
-    <normaloff>+.png</normaloff>+.png</iconset>
+    <normaloff>../../../../../.designer/backup/+.png</normaloff>../../../../../.designer/backup/+.png</iconset>
   </property>
   <property name="autoFillBackground">
    <bool>false</bool>
@@ -131,8 +131,7 @@
       </property>
       <property name="icon">
        <iconset theme="application-exit">
-        <normaloff/>
-       </iconset>
+        <normaloff>../../../../../.designer/backup</normaloff>../../../../../.designer/backup</iconset>
       </property>
       <property name="flat">
        <bool>false</bool>
@@ -146,7 +145,35 @@
       </property>
      </widget>
     </item>
-    <item row="11" column="1">
+    <item row="21" column="1">
+     <widget class="Line" name="line_2">
+      <property name="orientation">
+       <enum>Qt::Horizontal</enum>
+      </property>
+     </widget>
+    </item>
+    <item row="20" column="1">
+     <widget class="QWidget" name="wdtDisplay" native="true">
+      <property name="minimumSize">
+       <size>
+        <width>300</width>
+        <height>0</height>
+       </size>
+      </property>
+      <property name="maximumSize">
+       <size>
+        <width>300</width>
+        <height>300</height>
+       </size>
+      </property>
+      <layout class="QVBoxLayout" name="vl_display">
+       <property name="sizeConstraint">
+        <enum>QLayout::SetMinimumSize</enum>
+       </property>
+      </layout>
+     </widget>
+    </item>
+    <item row="18" column="1">
      <widget class="QTabWidget" name="tabWidget">
       <property name="minimumSize">
        <size>
@@ -170,7 +197,7 @@
       </property>
      </widget>
     </item>
-    <item row="4" column="1" rowspan="4">
+    <item row="4" column="1" rowspan="5">
      <widget class="QLabel" name="lblLogo">
       <property name="maximumSize">
        <size>
@@ -193,34 +220,6 @@
       <property name="alignment">
        <set>Qt::AlignCenter</set>
       </property>
-     </widget>
-    </item>
-    <item row="21" column="1">
-     <widget class="Line" name="line_2">
-      <property name="orientation">
-       <enum>Qt::Horizontal</enum>
-      </property>
-     </widget>
-    </item>
-    <item row="12" column="1" rowspan="9">
-     <widget class="QWidget" name="wdtDisplay" native="true">
-      <property name="minimumSize">
-       <size>
-        <width>300</width>
-        <height>0</height>
-       </size>
-      </property>
-      <property name="maximumSize">
-       <size>
-        <width>300</width>
-        <height>300</height>
-       </size>
-      </property>
-      <layout class="QVBoxLayout" name="vl_display">
-       <property name="sizeConstraint">
-        <enum>QLayout::SetMinimumSize</enum>
-       </property>
-      </layout>
      </widget>
     </item>
    </layout>
