--- a/cladplus_control/resources/control.ui
+++ b/cladplus_control/resources/control.ui
@@ -121,15 +121,21 @@ color: rgb(255, 255, 255);</string>
            </property>
           </widget>
          </item>
-         <item row="6" column="1">
+         <item row="7" column="1">
           <widget class="QDoubleSpinBox" name="sbTimecontrol">
            <property name="suffix">
             <string> s</string>
+           </property>
+           <property name="maximum">
+            <double>200.000000000000000</double>
            </property>
           </widget>
          </item>
          <item row="4" column="1">
           <widget class="QDoubleSpinBox" name="sbKd">
+           <property name="enabled">
+            <bool>false</bool>
+           </property>
            <property name="maximum">
             <double>1000.000000000000000</double>
            </property>
@@ -137,6 +143,9 @@ color: rgb(255, 255, 255);</string>
          </item>
          <item row="2" column="1">
           <widget class="QDoubleSpinBox" name="sbKp">
+           <property name="enabled">
+            <bool>false</bool>
+           </property>
            <property name="maximum">
             <double>1000.000000000000000</double>
            </property>
@@ -147,6 +156,9 @@ color: rgb(255, 255, 255);</string>
          </item>
          <item row="3" column="1">
           <widget class="QDoubleSpinBox" name="sbKi">
+           <property name="enabled">
+            <bool>false</bool>
+           </property>
            <property name="maximum">
             <double>1000.000000000000000</double>
            </property>
@@ -169,17 +181,17 @@ color: rgb(255, 255, 255);</string>
            </property>
           </widget>
          </item>
-         <item row="6" column="0">
+         <item row="7" column="0">
           <widget class="QLabel" name="lblTime_3">
            <property name="text">
             <string> Start time:</string>
            </property>
           </widget>
          </item>
-         <item row="7" column="1">
+         <item row="8" column="1">
           <widget class="QDoubleSpinBox" name="sbTrack"/>
          </item>
-         <item row="7" column="0">
+         <item row="8" column="0">
           <widget class="QLabel" name="lblTrack_2">
            <property name="text">
             <string> Start track:</string>
@@ -211,6 +223,23 @@ color: rgb(255, 255, 255);</string>
           <widget class="Line" name="line_6">
            <property name="orientation">
             <enum>Qt::Horizontal</enum>
+           </property>
+          </widget>
+         </item>
+         <item row="6" column="1">
+          <widget class="QDoubleSpinBox" name="sbTimereg">
+           <property name="suffix">
+            <string>s</string>
+           </property>
+           <property name="maximum">
+            <double>200.000000000000000</double>
+           </property>
+          </widget>
+         </item>
+         <item row="6" column="0">
+          <widget class="QLabel" name="lblTime4">
+           <property name="text">
+            <string>Setpoint time:</string>
            </property>
           </widget>
          </item>
@@ -374,7 +403,7 @@ color: rgb(255, 255, 255);</string>
      <item row="2" column="0">
       <widget class="QLabel" name="lblLenght">
        <property name="text">
-        <string>Lenght:</string>
+        <string>Control time (s):</string>
        </property>
       </widget>
      </item>
@@ -382,6 +411,9 @@ color: rgb(255, 255, 255);</string>
       <widget class="QLabel" name="lblTime_2">
        <property name="text">
         <string>0</string>
+       </property>
+       <property name="textFormat">
+        <enum>Qt::LogText</enum>
        </property>
       </widget>
      </item>
