--- a/cladplus_control/resources/control.ui
+++ b/cladplus_control/resources/control.ui
@@ -6,7 +6,7 @@
    <rect>
     <x>0</x>
     <y>0</y>
-    <width>325</width>
+    <width>322</width>
     <height>591</height>
    </rect>
   </property>
@@ -121,16 +121,6 @@ color: rgb(255, 255, 255);</string>
            </property>
           </widget>
          </item>
-         <item row="7" column="1">
-          <widget class="QDoubleSpinBox" name="sbTimecontrol">
-           <property name="suffix">
-            <string> s</string>
-           </property>
-           <property name="maximum">
-            <double>200.000000000000000</double>
-           </property>
-          </widget>
-         </item>
          <item row="4" column="1">
           <widget class="QDoubleSpinBox" name="sbKd">
            <property name="enabled">
@@ -181,20 +171,13 @@ color: rgb(255, 255, 255);</string>
            </property>
           </widget>
          </item>
-         <item row="7" column="0">
-          <widget class="QLabel" name="lblTime_3">
-           <property name="text">
-            <string> Start time:</string>
-           </property>
-          </widget>
-         </item>
-         <item row="8" column="1">
+         <item row="7" column="1">
           <widget class="QDoubleSpinBox" name="sbTrack"/>
          </item>
-         <item row="8" column="0">
+         <item row="7" column="0">
           <widget class="QLabel" name="lblTrack_2">
            <property name="text">
-            <string> Start track:</string>
+            <string>Track lenght(s):</string>
            </property>
           </widget>
          </item>
@@ -226,21 +209,25 @@ color: rgb(255, 255, 255);</string>
            </property>
           </widget>
          </item>
-         <item row="6" column="1">
-          <widget class="QDoubleSpinBox" name="sbTimereg">
-           <property name="suffix">
-            <string>s</string>
-           </property>
-           <property name="maximum">
-            <double>200.000000000000000</double>
+         <item row="6" column="0">
+          <widget class="QLabel" name="lblMode">
+           <property name="text">
+            <string>Mode:</string>
            </property>
           </widget>
          </item>
-         <item row="6" column="0">
-          <widget class="QLabel" name="lblTime4">
-           <property name="text">
-            <string>Setpoint time:</string>
-           </property>
+         <item row="6" column="1">
+          <widget class="QComboBox" name="btnAuto">
+           <item>
+            <property name="text">
+             <string>Continuous</string>
+            </property>
+           </item>
+           <item>
+            <property name="text">
+             <string>Tracks</string>
+            </property>
+           </item>
           </widget>
          </item>
         </layout>
@@ -388,7 +375,21 @@ color: rgb(255, 255, 255);</string>
     </widget>
    </item>
    <item>
+    <widget class="QPushButton" name="btnControl">
+     <property name="text">
+      <string>Accept Parameters</string>
+     </property>
+    </widget>
+   </item>
+   <item>
     <layout class="QGridLayout" name="gridLayout_7">
+     <item row="0" column="0">
+      <widget class="QLabel" name="lblControl_2">
+       <property name="text">
+        <string>Control:</string>
+       </property>
+      </widget>
+     </item>
      <item row="0" column="1">
       <widget class="QLabel" name="lblControl">
        <property name="styleSheet">
@@ -424,13 +425,6 @@ color: rgb(255, 255, 255);</string>
        </property>
       </widget>
      </item>
-     <item row="0" column="0">
-      <widget class="QLabel" name="lblControl_2">
-       <property name="text">
-        <string>Control:</string>
-       </property>
-      </widget>
-     </item>
      <item row="1" column="1">
       <widget class="QLabel" name="lblNumber">
        <property name="text">
@@ -439,13 +433,6 @@ color: rgb(255, 255, 255);</string>
       </widget>
      </item>
     </layout>
-   </item>
-   <item>
-    <widget class="QPushButton" name="btnControl">
-     <property name="text">
-      <string>Accept Parameters</string>
-     </property>
-    </widget>
    </item>
    <item>
     <widget class="Line" name="line_3">
