--- a/cladplus_control/resources/control.ui
+++ b/cladplus_control/resources/control.ui
@@ -397,7 +397,7 @@ color: rgb(255, 255, 255);</string>
 color: rgb(255, 255, 255);</string>
        </property>
        <property name="text">
-        <string>Stoped</string>
+        <string>Stopped</string>
        </property>
       </widget>
      </item>
