--- a/cladplus_control/resources/control.ui
+++ b/cladplus_control/resources/control.ui
@@ -232,6 +232,19 @@ color: rgb(255, 255, 255);</string>
          </item>
         </layout>
        </item>
+       <item row="1" column="0">
+        <spacer name="verticalSpacer">
+         <property name="orientation">
+          <enum>Qt::Vertical</enum>
+         </property>
+         <property name="sizeHint" stdset="0">
+          <size>
+           <width>20</width>
+           <height>40</height>
+          </size>
+         </property>
+        </spacer>
+       </item>
       </layout>
      </widget>
      <widget class="QWidget" name="tab_2">
